objects/General_Concept_Platform_Junction__c.object
<CustomObject>
    <description>What it does?  Object connecting gen concepts to platforms for demo requests.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.

Part of the DEMO REQUEST process.</description>
    <fields>
        <fullName>General_Concept_Name__c</fullName>
        <description>What it does?  Holds the name of a gen concept associated with a platform.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <formula>General_Concept__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General Concept Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Concept__c</fullName>
        <description>What it does?  Holds a link to the gen concept associated with a platform.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>General Concept</label>
        <referenceTo>General_Concept__c</referenceTo>
        <relationshipLabel>Platform</relationshipLabel>
        <relationshipName>General_Concept_Platform_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>What it does?  Holds a link between a platform and a gen concept.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Platform</label>
        <referenceTo>Platform__c</referenceTo>
        <relationshipLabel>General Concepts</relationshipLabel>
        <relationshipName>General_Concept_Platform_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>General Concept Platform Junction</label>
    <nameField>
        <displayFormat>GCPLT-{YYYY}-{MM}-{0000}</displayFormat>
        <label>General Concept Platform Junction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Concept Platform Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>